# herdr-scratch-pane

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  LICENSE  NOTICE  README.md  floating-pane.toml.example  herdr-plugin.toml
src/: actions.rs  app.rs  commands.rs  config.rs  decisions.rs  geometry.rs  herdr.rs  keybindings.rs  lib.rs  main.rs  mouse.rs  pane.rs  scope.rs  state.rs  status.rs  toggle.rs  workspace_marker.rs
tests/: core.rs  orchestration.rs  pane.rs
