[package]
name = "herdr-scratch-pane"
version = "0.1.0"
edition = "2021"
description = "A native zoomed scratch pane plugin for Herdr"
license = "MIT"

[lib]
name = "herdr_scratch_pane"
path = "src/lib.rs"

[[bin]]
name = "herdr-scratch-pane"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = "0.22"
