[package]
name = "herdr-scratch-pane"
version = "0.1.2"
edition = "2021"
description = "A persistent native floating scratch popup plugin for Herdr"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeromychu23/herdr-scratch-pane"
keywords = ["herdr", "plugin", "scratch-pane", "tmux"]
categories = ["command-line-utilities"]

[lib]
name = "herdr_scratch_pane"
path = "src/lib.rs"

[[bin]]
name = "herdr-scratch-pane"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = "0.22"
